fixed paragraph spacing

--- a/Article/Style.css
+++ b/Article/Style.css
@@ -36,7 +36,10 @@ header h2 {
 p {
     font-size: 1em;
     font-family: 'Futura', sans-serif;
+    width: 80em;
+    white-space: pre-line;;
 }
+
 img {
     align-content: center;
 }
